--- a/src/app/second/second.page.html
+++ b/src/app/second/second.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>second</ion-title>
+    <ion-title>Lunch Pads </ion-title>
   </ion-toolbar>
 </ion-header>
 
