--- a/src/app/capsules/capsules.page.html
+++ b/src/app/capsules/capsules.page.html
@@ -6,4 +6,14 @@
 
 <ion-content>
 
+  <ion-list>
+    <ion-item *ngFor="let c of capsules" [ngClass]="{'active': c.status , 'inactive': !c.status}"
+      class="ion-activatable" (click)="buttonClick(c.id)">
+      <ion-ripple-effect></ion-ripple-effect>
+      <ion-label>
+        {{ c.capsule_serial }} 
+      </ion-label>
+    </ion-item>
+  </ion-list>
+
 </ion-content>
