--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -9,7 +9,7 @@
       </ion-toolbar>
     </ion-header>
     <ion-content>
-      <ion-list>
+      <ion-list class="listFlex">
         <ion-menu-toggle auto-hide="false" *ngFor="let p of pages">
           <ion-item [routerLink]="p.url" routerDirection="root" [class.active-item]="selectedPath.startsWith(p.url)">
             <ion-label>
@@ -19,7 +19,7 @@
           </ion-item>
         </ion-menu-toggle>
 
-        <ion-item tappable routerLink="/login" routerDirection="root">
+        <ion-item tappable routerLink="/login" routerDirection="root" class="enbasContainer">
           <ion-icon name="close" slot="start"></ion-icon>
           Logout
         </ion-item>
