--- a/src/app/cores/cores.page.html
+++ b/src/app/cores/cores.page.html
@@ -6,4 +6,12 @@
 
 <ion-content>
 
+    <ion-list>
+        <ion-item *ngFor="let c of cores"  (click)="buttonClick(c.id)">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-label>
+            {{ c.core_serial }} 
+          </ion-label>
+        </ion-item>
+      </ion-list>
 </ion-content>
