--- a/src/app/dragons/dragons.page.html
+++ b/src/app/dragons/dragons.page.html
@@ -5,5 +5,12 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+    <ion-item *ngFor="let d of dragons" (click)="buttonClick(c.id)">
+      <ion-ripple-effect></ion-ripple-effect>
+      <ion-label>
+        {{ d.name }} 
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
