--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -5,5 +5,12 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+        <ion-item *ngFor="let h of history"  (click)="buttonClick(c.id)">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-label>
+            {{ h.title }} 
+          </ion-label>
+        </ion-item>
+      </ion-list>
 </ion-content>
