--- a/src/app/info/info.page.html
+++ b/src/app/info/info.page.html
@@ -5,5 +5,7 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-title>Nom : {{ infoApi.project_name }} </ion-title>
+    <ion-title>Version : {{  infoApi.version }} </ion-title>
+  
 </ion-content>
