--- a/src/app/launches/launches.page.html
+++ b/src/app/launches/launches.page.html
@@ -5,5 +5,12 @@
 </ion-header>
 
 <ion-content>
-
+    <ion-list>
+        <ion-item *ngFor="let l of launches" >
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-label>
+            {{ l.mission_name }} 
+          </ion-label>
+        </ion-item>
+      </ion-list>
 </ion-content>
