--- a/src/app/roadster/roadster.page.html
+++ b/src/app/roadster/roadster.page.html
@@ -6,4 +6,12 @@
 
 <ion-content>
 
+  <ion-title>
+    {{ roadster.name }} 
+  </ion-title>
+  <ion-title>
+      Distance par rapport à la terre en km : {{ roadster.earth_distance_km }} 
+    </ion-title>
+  <img src="{{roadster.flickr_images[1]}}" alt="ba ca marche pas">
+
 </ion-content>
