--- a/src/app/rockets/rockets.page.html
+++ b/src/app/rockets/rockets.page.html
@@ -6,4 +6,13 @@
 
 <ion-content>
 
+    <ion-list>
+        <ion-item *ngFor="let r of rockets"  (click)="buttonClick(c.id)">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-label>
+            {{ r.rocket_name }} 
+          </ion-label>
+        </ion-item>
+      </ion-list>
+
 </ion-content>
