--- a/src/app/second/second.page.html
+++ b/src/app/second/second.page.html
@@ -6,4 +6,15 @@
 
 <ion-content>
 
+
+    <ion-list>
+        <ion-item *ngFor="let l of launchPads" [ngClass]="{'active': l.status , 'inactive': !l.status}"
+          class="ion-activatable" (click)="buttonClick(l.id)">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-label>
+            {{ l.id }} 
+          </ion-label>
+        </ion-item>
+      </ion-list>
+
 </ion-content>
