--- a/src/app/ships/ships.page.html
+++ b/src/app/ships/ships.page.html
@@ -6,4 +6,13 @@
 
 <ion-content>
 
+    <ion-list>
+        <ion-item *ngFor="let s of ships" (click)="buttonClick(s.id)">
+          <ion-ripple-effect></ion-ripple-effect>
+          <ion-label>
+            {{ s.ship_name }} 
+          </ion-label>
+        </ion-item>
+      </ion-list>
+
 </ion-content>
