--- a/src/app/roadster/roadster.page.html
+++ b/src/app/roadster/roadster.page.html
@@ -12,6 +12,6 @@
   <ion-title>
       Distance par rapport à la terre en km : {{ roadster.earth_distance_km }} 
     </ion-title>
-  <img src="{{roadster.flickr_images[1]}}" alt="ba ca marche pas">
+  <img src="{{roadster.flickr_images[1]}}" alt="ca marche pas">
 
 </ion-content>
